# copy-playlist-backend

./: BUILDCHAIN.conf  CMakeLists.txt  configure.sh  copy_playlist_backend.doy  ubuntu_ppa_name
debian_ubuntu/: changelog  control  copyright
include/: copy_playlist_backend.h
src/: copy_playlist_backend.cpp
tests/: CMakeLists.txt  copy_playlist_backend_TEST.cpp  copy_playlist_backend_TEST.h  main.cpp
